# Mentoria-Backend

./: .env.example  main.py  pyproject.toml
database/config/: conexao.py
routes/: lista.py  pessoas.py
schemas/: pessoas.py
